added implementation report link, fixed fragIDs to appendices

--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -669,6 +669,8 @@
           previousPublishDate:  "2012-12-11",
           previousMaturity:  "CR",
 
+          implementationReportURI: "http://dvcs.w3.org/hg/prov/raw-file/default/reports/prov-implementations.html",
+
           // if there a publicly available Editor's Draft, this is the link
           //edDraftURI:           "https://dvcs.w3.org/hg/prov/raw-file/default/ontology/Overview.html",
 
@@ -799,7 +801,7 @@ It can also be specialized to create new classes and properties to model provena
          </p>
         <p>
          PROV-O is a lightweight ontology that can be adopted in a wide range of applications. 
-         With the exception of <a href="#prov-o-owl-profile">five axioms</a>, PROV-O conforms to the OWL-RL profile [[OWL2-PRIMER]]. 
+         With the exception of <a href="#owl-profile">five axioms</a>, PROV-O conforms to the OWL-RL profile [[OWL2-PRIMER]]. 
          The PROV Ontology classes and properties are defined such that they can not only be used directly to represent provenance information, 
          but also can be specialized for modeling application-specific provenance details in a variety of domains. 
          Thus, the PROV Ontology is expected to be both directly usable in applications as well as serve as a <i>reference model</i> 
@@ -1237,7 +1239,7 @@ prov:wasDerivedFrom
 
          <li>Added <a href="#compliance">Compliance with this document</a> section.</li>
 
-         <li>Corrected Turtle syntax for RL violations in <a href="#prov-o-owl-profile">PROV-O OWL Profile</a> section. They were missing owl:unionOf.</li>
+         <li>Corrected Turtle syntax for RL violations in <a href="#owl-profile">PROV-O OWL Profile</a> section. They were missing owl:unionOf.</li>
 
          <li>Updated attributions for the tools used to produce this document in <a href="#acknowledgements">Acknowledgements</a> section.</li>
 
