--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -675,8 +675,9 @@
           //edDraftURI:           "https://dvcs.w3.org/hg/prov/raw-file/default/ontology/Overview.html",
 
           // if this is a LCWD, uncomment and set the end of its review period
-          // lcEnd: "2012-09-18",
-          crEnd: "2013-04-09",
+          prEnd: "2013-04-09",
+          crEnd: "2013-01-31",
+          lcEnd: "2012-09-18",
 
           // if you want to have extra CSS, append them to this list
           // it is recommended that the respec.css stylesheet be kept
