--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -621,7 +621,7 @@
       }
      </style>
 
-     <script src='https://www.w3.org/Tools/respec/respec-w3c-common' class='remove' type="text/javascript"></script>
+     <script src='http://dev.w3.org/2009/dap/ReSpec.js/js/respec.js' class='remove' type="text/javascript"></script>
      <script src="https://www.w3.org/2007/OWL/toggles.js" class="remove" type="text/javascript"></script>
    
     <script class='remove'>
@@ -681,7 +681,7 @@
 
           // if you want to have extra CSS, append them to this list
           // it is recommended that the respec.css stylesheet be kept
-          extraCSS:         [ //"http://dev.w3.org/2009/dap/ReSpec.js/css/respec.css", 
+          extraCSS:         [ "http://dev.w3.org/2009/dap/ReSpec.js/css/respec.css", 
                               "./extra.css"],
 
           // editors, add as many as you like
