--- a/components/services/prov-o/html.template
+++ b/components/services/prov-o/html.template
@@ -648,7 +648,7 @@
 
       var respecConfig = {
           // specification status (e.g. WD, LCWD, NOTE, etc.). If in doubt use ED.
-          specStatus:           "PR",
+          specStatus:           "REC",
           
           // the specification's short name, as in http://www.w3.org/TR/short-name/
           shortName:            "prov-o",
@@ -658,7 +658,7 @@
           //subtitle   :  "",
 
           // if you wish the publication date to be other than today, set this
-          publishDate:  "2013-03-12",
+          publishDate:  "2013-04-30",
 
           // if the specification's copyright date is a range of years, specify
           // the start date here:
@@ -666,10 +666,10 @@
 
           // if there is a previously published draft, uncomment this and set its YYYY-MM-DD date
           // and its maturity status
-          previousPublishDate:  "2012-12-11",
-          previousMaturity:  "CR",
+          previousPublishDate:  "2013-03-12",
+          previousMaturity:  "PR",
 
-          implementationReportURI: "http://www.w3.org/TR/2013/WD-prov-implementations-20130312/",
+          implementationReportURI: "http://www.w3.org/TR/2013/NOTE-prov-implementations-20130430/",
 
           // if there a publicly available Editor's Draft, this is the link
           //edDraftURI:           "https://dvcs.w3.org/hg/prov/raw-file/default/ontology/Overview.html",
